fix: switched to a lifting app, as it is simply more interesting to me
Signed-off-by: Eduardo Morales <emoral435@gmail.com>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Repeatedly get better at software engineering daily, bit by bit.">
-    <title>RepetiCode</title>
+    <meta name="description" content="Repeatedly continue your dedication to your health, lift by lift.">
+    <title>RepetiSwole</title>
   </head>
   <body>
     <div id="root"></div>
